[metadata]
name = backports.time_perf_counter
url = https://github.com/ejd/backports.time_perf_counter
author = Eric Dramstad
author_email = edrams@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
license = MIT
license_file = LICENSE.rst
description = time.perf_counter() for Python < 3.3
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst; charset=UTF-8

[options]
packages = find:
test_suite = tests.test_perf_counter
namespace_packages =
    backports
install_requires =
    monotonic; python_version < "3.3"
    setuptools
setup_requires =
    setuptools_scm

[options.packages.find]
exclude =
     tests
     tests.*

[wheel]
universal = true
